--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,9 @@ android {
     dataBinding {
         enabled true
     }
-    viewBinding{
-        enabled true
-    }
+//    viewBinding{
+//        enabled true
+//    }
 }
 
 dependencies {
